# repo-dev-eval-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.gemini/: config.yaml  styleguide.md
.github/workflows/: ai-pr-review.yml  ci.yml  codeql.yml  codex-pr-review.yml  daily-agent.yml  gemini-pr-review.yml
config/: repo_eval.sample.yaml  repos.yaml
input/: openlibing-code-repos.xlsx
reports/samples/: openlibing-smoke.html  openlibing-smoke.json  openlibing-smoke.md  real-focus.html  real-focus.json  real-focus.md  sample-vllm.html  sample-vllm.json  sample-vllm.md
skills/community_docs/: registry.yaml
skills/oss-ml-issue-fixing/: SKILL.md
specs/: daily-automation-plan.md  optimization-2026-03-06.md  repo-eval-agent-architecture.md
specs/repos/: pytorch__pytorch.json  pytorch__pytorch.md  sgl-project__sglang.json  sgl-project__sglang.md  triton-lang__triton.json  triton-lang__triton.md  vllm-project__vllm.json  vllm-project__vllm.md
src/oss_issue_fixer/: agent.py  cli.py  config.py  github_api.py  models.py  repo_eval_agent.py  repo_eval_ai.py  repo_eval_config.py  repo_eval_docs.py  smoke.py  (+7 more)
tests/: test_ai_pr_review.py  test_config.py  test_repo_eval_agent.py  test_repo_eval_cli.py  test_repo_eval_config.py  test_repo_eval_docs.py  test_repo_eval_input.py  test_repo_eval_report.py  test_repo_eval_report_jdk.py  test_repo_eval_scan.py
tools/: ai_pr_review.py  check_pr_target.py  generate_repo_specs.py  publish_to_github.ps1  register_daily_task.ps1  report_daily_prs.py  run_agent_daily.ps1  run_openlibing_batch.ps1
(+5 files in other folders)
