[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-dev-eval-agent"
version = "0.1.0"
description = "Repository development experience evaluation agent for OSS communities."
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.5",
  "PyYAML>=6.0.1",
  "requests>=2.32.3",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.4.1",
  "pre-commit>=4.5.0",
  "pytest>=8.4.0",
  "ruff>=0.15.5",
]

[project.scripts]
oss-fixer = "oss_issue_fixer.cli:main"
repo-eval-agent = "oss_issue_fixer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
